--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -470,7 +470,7 @@ a.sub_dropdown_btn.active {
     text-decoration: none;
     color: #fff;
     box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.05);
-    margin: 0 20px;
+    margin: 10px 20px;
     border-radius: 50%;
     display: block;
     position: relative;
